--- a/Context Unigram Model.ipynb
+++ b/Context Unigram Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5129,36 +5129,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building content words.\n",
-      "----              precision    recall  f1-score   support\n",
-      "\n",
-      "       False       0.77      0.23      0.36      6744\n",
-      "        True       0.22      0.76      0.34      1882\n",
-      "\n",
-      "   micro avg       0.35      0.35      0.35      8626\n",
-      "   macro avg       0.49      0.49      0.35      8626\n",
-      "weighted avg       0.65      0.35      0.35      8626\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_test, _, y_test = preprocess_data(test_set)\n",
-    "\n",
-    "preds = clf.predict(X_test)\n",
-    "\n",
-    "print(classification_report(y_test, preds))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5174,7 +5144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -5183,7 +5153,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------Fitting 10 folds for each of 40 candidates, totalling 400 fits\n"
+      "------(18527, 7691) 7690\n",
+      "Fitting 10 folds for each of 40 candidates, totalling 400 fits\n"
      ]
     },
     {
@@ -5191,19 +5162,42 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   5 tasks      | elapsed:    3.2s\n",
-      "[Parallel(n_jobs=-1)]: Done  10 tasks      | elapsed:    3.6s\n",
-      "[Parallel(n_jobs=-1)]: Done  17 tasks      | elapsed:    4.1s\n",
-      "[Parallel(n_jobs=-1)]: Done  24 tasks      | elapsed:    4.6s\n",
-      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:    5.2s\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    5.8s\n",
+      "[Parallel(n_jobs=-1)]: Done   5 tasks      | elapsed:    3.7s\n",
+      "[Parallel(n_jobs=-1)]: Done  10 tasks      | elapsed:    4.0s\n",
+      "[Parallel(n_jobs=-1)]: Done  17 tasks      | elapsed:    4.5s\n",
+      "[Parallel(n_jobs=-1)]: Done  24 tasks      | elapsed:    4.8s\n",
+      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:    5.5s\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    6.1s\n",
       "[Parallel(n_jobs=-1)]: Done  53 tasks      | elapsed:    6.7s\n",
-      "[Parallel(n_jobs=-1)]: Done  64 tasks      | elapsed:    7.8s\n",
-      "[Parallel(n_jobs=-1)]: Done  77 tasks      | elapsed:    9.0s\n",
-      "[Parallel(n_jobs=-1)]: Done  90 tasks      | elapsed:   10.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 105 tasks      | elapsed:   12.2s\n",
-      "[Parallel(n_jobs=-1)]: Done 120 tasks      | elapsed:   14.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 137 tasks      | elapsed:   19.3s\n"
+      "[Parallel(n_jobs=-1)]: Done  64 tasks      | elapsed:    7.6s\n",
+      "[Parallel(n_jobs=-1)]: Done  77 tasks      | elapsed:    8.9s\n",
+      "[Parallel(n_jobs=-1)]: Done  90 tasks      | elapsed:   10.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 105 tasks      | elapsed:   12.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 120 tasks      | elapsed:   14.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 137 tasks      | elapsed:   17.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 154 tasks      | elapsed:   23.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 173 tasks      | elapsed:   32.2s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   48.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 213 tasks      | elapsed:  1.1min\n",
+      "[Parallel(n_jobs=-1)]: Done 234 tasks      | elapsed:  1.8min\n",
+      "[Parallel(n_jobs=-1)]: Done 257 tasks      | elapsed:  2.9min\n",
+      "[Parallel(n_jobs=-1)]: Done 280 tasks      | elapsed:  4.6min\n",
+      "[Parallel(n_jobs=-1)]: Done 305 tasks      | elapsed:  8.3min\n",
+      "[Parallel(n_jobs=-1)]: Done 330 tasks      | elapsed: 10.9min\n",
+      "[Parallel(n_jobs=-1)]: Done 357 tasks      | elapsed: 13.8min\n",
+      "[Parallel(n_jobs=-1)]: Done 384 tasks      | elapsed: 17.2min\n",
+      "[Parallel(n_jobs=-1)]: Done 400 out of 400 | elapsed: 19.1min finished\n",
+      "C:\\Users\\ezutp\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:841: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LibLinear]--(4988, 7691) 7690\n",
+      "{'False': {'precision': 0.8100574712643678, 'recall': 0.7086475615887381, 'f1-score': 0.7559667471171897, 'support': 3978}, 'True': {'precision': 0.23143236074270557, 'recall': 0.3455445544554455, 'f1-score': 0.27720413026211277, 'support': 1010}, 'micro avg': {'precision': 0.6351242983159583, 'recall': 0.6351242983159583, 'f1-score': 0.6351242983159583, 'support': 4988}, 'macro avg': {'precision': 0.5207449160035367, 'recall': 0.5270960580220918, 'f1-score': 0.5165854386896512, 'support': 4988}, 'weighted avg': {'precision': 0.6928940066238547, 'recall': 0.6351242983159583, 'f1-score': 0.6590240360057968, 'support': 4988}}\n",
+      "Wall time: 19min 10s\n"
      ]
     }
    ],
@@ -5213,7 +5207,7 @@
     "    'academic':None,\n",
     "#     'fiction':None,\n",
     "#     'conversation':None,\n",
-    "    'newspapers':None\n",
+    "#     'newspapers':None\n",
     "}\n",
     "\n",
     "for genre in results:\n",
@@ -5238,25 +5232,56 @@
     "            clf.fit(X_train, y_train)\n",
     "\n",
     "            test_set = pd.read_csv('data/test/{}/words.csv'.format(genre), encoding='ISO--8859-1', na_filter=False)\n",
-    "            X_test, _, _, y_test = preprocess_data(test_set)\n",
+    "            X_test, _, _, y_test = preprocess_data(test_set, vocabulary)\n",
     "            preds = clf.predict(X_test)\n",
     "\n",
-    "            result = classification_report(y_test, preds, output_dict)\n",
+    "            result = classification_report(y_test, preds, output_dict=True)\n",
     "            print(result)\n",
+    "            f.write(json.dumps(result))\n",
     "            results[genre] = result\n",
     "        except Exception as e:\n",
     "            print(e)\n",
     "            print(results)\n",
-    "            f.write(json.dumps(results))"
+    "            raise e"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'False': {'precision': 0.8100574712643678,\n",
+       "  'recall': 0.7086475615887381,\n",
+       "  'f1-score': 0.7559667471171897,\n",
+       "  'support': 3978},\n",
+       " 'True': {'precision': 0.23143236074270557,\n",
+       "  'recall': 0.3455445544554455,\n",
+       "  'f1-score': 0.27720413026211277,\n",
+       "  'support': 1010},\n",
+       " 'micro avg': {'precision': 0.6351242983159583,\n",
+       "  'recall': 0.6351242983159583,\n",
+       "  'f1-score': 0.6351242983159583,\n",
+       "  'support': 4988},\n",
+       " 'macro avg': {'precision': 0.5207449160035367,\n",
+       "  'recall': 0.5270960580220918,\n",
+       "  'f1-score': 0.5165854386896512,\n",
+       "  'support': 4988},\n",
+       " 'weighted avg': {'precision': 0.6928940066238547,\n",
+       "  'recall': 0.6351242983159583,\n",
+       "  'f1-score': 0.6590240360057968,\n",
+       "  'support': 4988}}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "results"
+    "result"
    ]
   },
   {
