--- a/model_functions.ipynb
+++ b/model_functions.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model"
+    "## Base Model"
    ]
   },
   {
@@ -108,11 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_data(words, want_lc=False, run_elkb=True):\n",
+    "def preprocess_data(words, vocabulary=None, want_lc=False, run_elkb=True, want_gt=False):\n",
     "    genre = words.iloc[0]['genre']\n",
     "    \n",
     "    content_words = build_content_words(words)\n",
@@ -122,9 +122,10 @@
     "    \n",
     "    y = build_labels(content_words)\n",
     "    \n",
-    "    vocabulary = content_words[['word']].drop_duplicates().set_index('word')\n",
+    "    if vocabulary is None:\n",
+    "        vocabulary = content_words[['word']].drop_duplicates().set_index('word')\n",
     "    \n",
-    "    X = build_features(content_words, vocabulary, genre, want_lc, run_elkb)\n",
+    "    X = build_features(content_words, vocabulary, genre, want_lc, run_elkb, want_gt)\n",
     "    \n",
     "    shuffle(X, y, random_state=0)\n",
     "    return X, test_fold_ids, vocabulary, y\n",
@@ -166,18 +167,24 @@
     "    return words['text_id'].apply(lambda x: test_fold_ids[x])\n",
     "\n",
     "def build_labels(words):\n",
-    "#         print('Building labels.')\n",
     "    labels = words['function'] == 'mrw'\n",
     "\n",
     "    return labels\n",
     "\n",
-    "def build_features(dataset, vocabulary, genre, want_lc, run_elkb): \n",
+    "def build_features(dataset, vocabulary, genre, want_lc, run_elkb, want_gt): \n",
     "    sparse_unigram_features, _ = sparse_featurize(dataset, vocabulary)\n",
     "    X = sparse_unigram_features\n",
+    "    print(X.shape)\n",
     "    \n",
     "    if want_lc:\n",
     "        lc_feature = build_lc_feature(dataset, genre, run_elkb)\n",
+    "        print(lc_feature.shape)\n",
     "        X = hstack([X, csr_matrix(np.array(lc_feature)[:,None])], format='csr')\n",
+    "        \n",
+    "    if want_gt:\n",
+    "        gt_feature = build_gt_feature(dataset, genre)\n",
+    "        print(gt_feature.shape)\n",
+    "        X = hstack([X, csr_matrix(np.array(gt_feature)[:,None])], format='csr')\n",
     "    \n",
     "    return X"
    ]
@@ -186,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Context Unigram"
+    "## Context Unigram"
    ]
   },
   {
@@ -234,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lexical Chain"
+    "## Lexical Chain"
    ]
   },
   {
@@ -363,7 +370,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Topic modeling"
+    "## Global Topic Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# n_topics\n",
+    "def calc_t_given_d(doc_topic_dist):\n",
+    "    total_d = sum((sum(dtd) for dtd in doc_topic_dist))\n",
+    "    t_given_d = [\n",
+    "        sum(tdd)/total_d for tdd in zip(*doc_topic_dist)\n",
+    "    ]\n",
+    "    return t_given_d\n",
+    "\n",
+    "# n_topics X n_vocabulary\n",
+    "def calc_w_given_t(components):\n",
+    "    return components / components.sum(axis=1)[:, np.newaxis]\n",
+    "\n",
+    "# n_vocabulary\n",
+    "def calc_w(components):\n",
+    "    return components.sum(axis=0)/sum(sum(arr) for arr in components)\n",
+    "\n",
+    "# n_topics\n",
+    "def calc_t(doc_topic_dist):\n",
+    "    return doc_topic_dist.sum(axis=0)/sum(sum(arr) for arr in doc_topic_dist)\n",
+    "\n",
+    "# n_vocabulary X n_topics\n",
+    "def calc_t_given_w(components, doc_topic_dist):\n",
+    "    w_given_t = calc_w_given_t(components)\n",
+    "    p_w = calc_w(components)\n",
+    "    p_t = calc_t(doc_topic_dist)\n",
+    "\n",
+    "    t_given_w = list(zip(*((w_given_t / p_w) * p_t[:,None])))\n",
+    "    return t_given_w"
    ]
   },
   {
@@ -371,7 +414,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def build_gt_feature(content_words, genre):\n",
+    "    sentences = pd.read_csv('data/raw/sentences.csv', encoding='ISO-8859-1')[['sentence_id', 'paragraph_id']]\n",
+    "    dataset = (\n",
+    "        content_words\n",
+    "         .merge(sentences)\n",
+    "         .merge(pd.Series(build_paragraphs(content_words).index))\n",
+    "    )\n",
+    "\n",
+    "    lda_model = load('models/lda_{}.joblib'.format(genre))\n",
+    "    vocab = dataset[['lemma']].drop_duplicates().set_index('lemma')\n",
+    "    \n",
+    "    gt_feature = []\n",
+    "    for paragraph, group in dataset.groupby('paragraph_id'):\n",
+    "        sparse_matrix = document_word_matrix(group, vocab)\n",
+    "        paragraph_topic_dist = lda_model.transform(sparse_matrix)\n",
+    "\n",
+    "        t_given_w = calc_t_given_w(lda_model.components_, paragraph_topic_dist)\n",
+    "        t_given_d = calc_t_given_d(paragraph_topic_dist)\n",
+    "        for word in group.itertuples():\n",
+    "            cos_sim = cosine(\n",
+    "                t_given_w[vocab.index.get_loc(\n",
+    "                    word.lemma)],\n",
+    "                t_given_d\n",
+    "            )\n",
+    "            gt_feature.append([word.word_id, cos_sim])\n",
+    "\n",
+    "        print('Calculating for paragraph {}'.format(paragraph))\n",
+    "\n",
+    "    gt_feature = pd.DataFrame(gt_feature, columns=['word_id', 'GT'])\n",
+    "    return gt_feature"
+   ]
   }
  ],
  "metadata": {
