Update commit Sept

--- a/model_functions.ipynb
+++ b/model_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,9 @@
     "import warnings\n",
     "from joblib import dump, load\n",
     "from sklearn.decomposition import LatentDirichletAllocation\n",
-    "from scipy.spatial.distance import cosine"
+    "from scipy.spatial.distance import cosine\n",
+    "import subprocess\n",
+    "import ast"
    ]
   },
   {
@@ -108,12 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_data(words, vocabulary=None, want_lc=False, run_elkb=True, want_gt=False):\n",
+    "def preprocess_data(\n",
+    "    words, vocabulary=None,\n",
+    "    want_lc=False,\n",
+    "    want_gt=False, gt_vocab=None,\n",
+    "    want_gwc=False,\n",
+    "    want_ac=False\n",
+    "):\n",
     "    genre = words.iloc[0]['genre']\n",
+    "    print(genre)\n",
     "    \n",
     "    content_words = build_content_words(words)\n",
     "    \n",
@@ -125,10 +134,16 @@
     "    if vocabulary is None:\n",
     "        vocabulary = content_words[['word']].drop_duplicates().set_index('word')\n",
     "    \n",
-    "    X = build_features(content_words, vocabulary, genre, want_lc, run_elkb, want_gt)\n",
+    "    X, gt_vocab = build_features(\n",
+    "        content_words, vocabulary, genre,\n",
+    "        want_lc,\n",
+    "        want_gt, gt_vocab,\n",
+    "        want_gwc,\n",
+    "        want_ac\n",
+    "    )\n",
     "    \n",
     "    shuffle(X, y, random_state=0)\n",
-    "    return X, test_fold_ids, vocabulary, y\n",
+    "    return X, test_fold_ids, vocabulary, gt_vocab, y\n",
     "\n",
     "def build_content_words(all_words):\n",
     "    # Keeping content words: http://ucrel.lancs.ac.uk/bnc2/bnc2guide.htm#m2adv\n",
@@ -171,22 +186,41 @@
     "\n",
     "    return labels\n",
     "\n",
-    "def build_features(dataset, vocabulary, genre, want_lc, run_elkb, want_gt): \n",
+    "def build_features(\n",
+    "    dataset, vocabulary, genre,\n",
+    "    want_lc,\n",
+    "    want_gt, gt_vocab,\n",
+    "    want_gwc,\n",
+    "    want_ac\n",
+    "):\n",
+    "    \n",
     "    sparse_unigram_features, _ = sparse_featurize(dataset, vocabulary)\n",
     "    X = sparse_unigram_features\n",
     "    print(X.shape)\n",
     "    \n",
     "    if want_lc:\n",
-    "        lc_feature = build_lc_feature(dataset, genre, run_elkb)\n",
-    "        print(lc_feature.shape)\n",
-    "        X = hstack([X, csr_matrix(np.array(lc_feature)[:,None])], format='csr')\n",
+    "        lc_feature = build_lc_feature(dataset, genre).merge(dataset)['is_in_longest_chain'].fillna(False)\n",
+    "        display(sum(lc_feature))\n",
+    "        X = hstack([X,\n",
+    "                    csr_matrix(\n",
+    "                        np.array(lc_feature)\n",
+    "                        [:,None])], format='csr')\n",
+    "        display(X[:100].todense())\n",
     "        \n",
     "    if want_gt:\n",
-    "        gt_feature = build_gt_feature(dataset, genre)\n",
-    "        print(gt_feature.shape)\n",
+    "        gt_feature, gt_vocab = build_gt_feature(dataset, genre, gt_vocab)\n",
     "        X = hstack([X, csr_matrix(np.array(gt_feature)[:,None])], format='csr')\n",
+    "        \n",
+    "    if want_gwc:\n",
+    "        gwc_feature = build_gwc_feature(dataset)\n",
+    "        X = hstack([X, csr_matrix(np.array(gwc_feature)[:,None])], format='csr')\n",
+    "        \n",
+    "    if want_ac:\n",
+    "        ac_feature = build_ac_feature(dataset)\n",
+    "        X = hstack([X, csr_matrix(ac_feature)], format='csr')       \n",
     "    \n",
-    "    return X"
+    "    print(X.shape)\n",
+    "    return X, gt_vocab"
    ]
   },
   {
@@ -246,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,19 +293,19 @@
     "    paragraph_sentences = sentences[sentences['paragraph_id'] != -1]\n",
     "\n",
     "    paragraphs = paragraph_sentences.groupby('paragraph_id')['sentence'].agg(list).apply(lambda x: ' '.join(x))\n",
-    "    return paragraphs\n",
+    "    return sentences, paragraphs\n",
     "\n",
     "\n",
     "def save_paragraphs(paragraphs):\n",
     "    try:\n",
-    "        files = glob.glob('data/tmp/paragraphs/*')\n",
+    "        files = glob.glob('data/paragraphs/*')\n",
     "        for f in files:\n",
     "            os.remove(f)\n",
     "    except:\n",
-    "        os.mkdir('data/tmp/paragraphs')\n",
+    "        os.mkdir('data/paragraphs')\n",
     "        \n",
     "    for i, paragraph in paragraphs.iteritems():\n",
-    "        file_name = \"data/tmp/paragraphs/paragraph_{}.txt\".format(i)\n",
+    "        file_name = \"data/paragraphs/paragraph_{}.txt\".format(i)\n",
     "        with open(file_name, 'w', encoding='utf-8') as f:\n",
     "            print('Writing {}'.format(file_name))\n",
     "            f.write(paragraph)  \n",
@@ -282,11 +316,11 @@
     "#     dir = os.path.dirname(os.path.realpath(__file__))\n",
     "#     os.chdir(os.path.join(dir, '../ELKB'))\n",
     "\n",
-    "    with open('data/tmp/longest_chains.csv'.format(genre), 'w', encoding='utf-8') as f:\n",
+    "    with open('data/longest_chains.csv'.format(genre), 'w', encoding='utf-8') as f:\n",
     "        csv_writer = csv.writer(f, delimiter=',')\n",
     "        csv_writer.writerow(('paragraph_id', 'longest_chain'))\n",
     "\n",
-    "        for file_name in glob.glob('data/tmp/paragraphs/paragraph*.txt'.format(genre)):\n",
+    "        for file_name in glob.glob('data/paragraphs/paragraph*.txt'.format(genre)):\n",
     "            paragraph_id = os.path.splitext(os.path.basename(file_name))[\n",
     "                0].split('_')[-1]\n",
     "\n",
@@ -322,13 +356,19 @@
     "                # line = '{},{}'.format(paragraph_id, longest_chain)\n",
     "                # f.write(line + '\\n')\n",
     "                row = [paragraph_id, longest_chain_str]\n",
-    "#                 print(row)\n",
     "                print('Writing longest chain for {} with {} words!\\n'\n",
     "                      .format(file_name, len(longest_chain)))\n",
-    "                csv_writer.writerow(row)\n",
-    "\n",
-    "def get_lexical_chains(dataset):\n",
-    "    longest_chains = pd.read_csv('data/tmp/longest_chains.csv')  # Paragraphs with longest chains != ''\n",
+    "                csv_writer.writerow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_lexical_chains(dataset, sentences, paragraphs):\n",
+    "    longest_chains = pd.read_csv('data/longest_chains.csv')  # Paragraphs with longest chains != ''\n",
     "\n",
     "    longest_chain_in_paragraphs = longest_chains.merge(paragraphs, left_on='paragraph_id', right_index=True)\n",
     "    words_and_longest_chains = (\n",
@@ -348,22 +388,16 @@
     "            words_and_longest_chains['longest_chain_list']\n",
     "        )\n",
     "    ]\n",
+    "    return words_and_longest_chains[['word_id', 'longest_chain_list', 'is_in_longest_chain']]\n",
     "\n",
-    "    return words_and_longest_chains[['word_id', 'is_in_longest_chain']]\n",
-    "\n",
-    "def build_lc_feature(dataset, genre, run_elkb):\n",
-    "    paragraphs = build_paragraphs(dataset)\n",
+    "def build_lc_feature(dataset, genre):\n",
+    "    sentences, paragraphs = build_paragraphs(dataset)\n",
     "    \n",
-    "    if run_elkb:\n",
-    "        save_paragraphs(paragraphs)\n",
-    "\n",
-    "        get_longest_chains(genre)\n",
-    "    \n",
-    "    lc_feature = get_lexical_chains(dataset)\n",
+    "    lc_feature = get_lexical_chains(dataset, sentences, paragraphs)\n",
     "    \n",
     "    dataset_with_lc_feature = dataset.merge(lc_feature, how='left')\n",
     "\n",
-    "    return dataset_with_lc_feature.sort_values('word_id')['is_in_longest_chain'].fillna(False)"
+    "    return dataset_with_lc_feature.sort_values('word_id')"
    ]
   },
   {
@@ -406,7 +440,31 @@
     "    p_t = calc_t(doc_topic_dist)\n",
     "\n",
     "    t_given_w = list(zip(*((w_given_t / p_w) * p_t[:,None])))\n",
-    "    return t_given_w"
+    "    return t_given_w\n",
+    "\n",
+    "# Turn lemmas of document to a document word matrix.\n",
+    "def document_word_matrix(words, vocabulary):\n",
+    "    indices = []\n",
+    "    data = []\n",
+    "    indptr = [0]\n",
+    "    for i, word in words['lemma'].iteritems():\n",
+    "        # Used to generate a row of 0's and 1's for sparse matrix\n",
+    "        unique_unigram_indices = set()\n",
+    "        # ID for an unknown word is == len(vocabulary).\n",
+    "        if word not in vocabulary.index:\n",
+    "            unique_unigram_indices.add(len(vocabulary))\n",
+    "        else:\n",
+    "            unique_unigram_indices.add(vocabulary.index.get_loc(word))\n",
+    "\n",
+    "        # Data = 1 at column index of sparse matrix = row index of word in vocabulary.\n",
+    "        indices.extend(unique_unigram_indices)  # Indices of the data values in this row.\n",
+    "        data.extend(np.ones(len(unique_unigram_indices), dtype=int))  # Data of all one's.\n",
+    "        indptr.append(indptr[-1]+len(unique_unigram_indices))\n",
+    "\n",
+    "        if not i % 2000:\n",
+    "            print('...', end='', flush=True)\n",
+    "\n",
+    "    return csr_matrix((data, indices, indptr), dtype=int, shape=(len(words), len(vocabulary)+1))"
    ]
   },
   {
@@ -415,17 +473,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_gt_feature(content_words, genre):\n",
+    "def build_gt_feature(content_words, genre, vocab):\n",
     "    sentences = pd.read_csv('data/raw/sentences.csv', encoding='ISO-8859-1')[['sentence_id', 'paragraph_id']]\n",
     "    dataset = (\n",
     "        content_words\n",
-    "         .merge(sentences)\n",
-    "         .merge(pd.Series(build_paragraphs(content_words).index))\n",
+    "         .merge(sentences[sentences['paragraph_id'] != -1])\n",
     "    )\n",
     "\n",
     "    lda_model = load('models/lda_{}.joblib'.format(genre))\n",
-    "    vocab = dataset[['lemma']].drop_duplicates().set_index('lemma')\n",
     "    \n",
+    "    if vocab is None:\n",
+    "        vocab = dataset[['lemma']].drop_duplicates().set_index('lemma')\n",
+    "\n",
     "    gt_feature = []\n",
     "    for paragraph, group in dataset.groupby('paragraph_id'):\n",
     "        sparse_matrix = document_word_matrix(group, vocab)\n",
@@ -434,17 +493,137 @@
     "        t_given_w = calc_t_given_w(lda_model.components_, paragraph_topic_dist)\n",
     "        t_given_d = calc_t_given_d(paragraph_topic_dist)\n",
     "        for word in group.itertuples():\n",
+    "            t_given_w_index = vocab.index.get_loc(word.lemma) if word.lemma in vocab.index else len(vocab)\n",
     "            cos_sim = cosine(\n",
-    "                t_given_w[vocab.index.get_loc(\n",
-    "                    word.lemma)],\n",
+    "                t_given_w_index,\n",
     "                t_given_d\n",
     "            )\n",
     "            gt_feature.append([word.word_id, cos_sim])\n",
     "\n",
     "        print('Calculating for paragraph {}'.format(paragraph))\n",
     "\n",
-    "    gt_feature = pd.DataFrame(gt_feature, columns=['word_id', 'GT'])\n",
-    "    return gt_feature"
+    "    gt_feature = content_words.merge(\n",
+    "        pd.DataFrame(gt_feature, columns=['word_id', 'GT']),\n",
+    "        how='left'\n",
+    "    )\n",
+    "    display(content_words.sample(5))\n",
+    "    display(gt_feature.sample(5))\n",
+    "    print('Nulls:', len(gt_feature), len(gt_feature[gt_feature['GT'].isnull()]))\n",
+    "    return gt_feature['GT'].fillna(0), vocab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GWC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_gwc_feature(dataset):\n",
+    "    words_with_frames = pd.read_csv('data/words_with_frames.csv')\n",
+    "    display(dataset.merge(words_with_frames, left_on='word_id', right_on='word_id'))\n",
+    "    gwc_feature = dataset.merge(words_with_frames, left_on='word_id', right_on='word_id')['gwc']\n",
+    "    print(len(dataset), len(gwc_feature))\n",
+    "    assert len(dataset) == len(gwc_feature)\n",
+    "    return gwc_feature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_ac_feature(dataset):\n",
+    "    dep_types = ['amod', 'nsubj', 'obj', 'appos', 'flat', 'aux',\n",
+    "                 'acl_relcl', 'det', 'nummod', 'compound', 'case',\n",
+    "                 'nmod', 'mark', 'acl', 'obl', 'ccomp', 'nmod_poss',\n",
+    "                 'cc', 'conj', 'punct', 'advmod', 'nsubj_pass',\n",
+    "                 'aux_pass', 'cop', 'parataxis', 'advcl', 'compound_prt', \n",
+    "                 'expl', 'obl_tmod', 'det_predet', 'csubj', 'xcomp',\n",
+    "                 'iobj', 'discourse', 'list', 'vocative', 'nmod_tmod',\n",
+    "                 'obl_npmod', 'nmod_npmod', 'cc_preconj', 'fixed',\n",
+    "                 'goeswith', 'reparandum']\n",
+    "    \n",
+    "    assert len(dep_types) == 43\n",
+    "    \n",
+    "    words_with_ac_ratings = pd.read_csv('data/words_with_ac_ratings.csv')\n",
+    "    display(dataset.merge(words_with_ac_ratings, left_on='word_id', right_on='word_id'))\n",
+    "    ac_feature = dataset.merge(words_with_ac_ratings, left_on='word_id', right_on='word_id')['ac']\n",
+    "    \n",
+    "    words_with_dep_acs = pd.read_csv('data/words_with_dep_acs.csv')\n",
+    "    dep_ac_feature = dataset.merge(words_with_dep_acs, left_on='word_id', right_on='word_id')[dep_types]\n",
+    "    assert len(dep_ac_feature.columns == 43)\n",
+    "    \n",
+    "    print(len(dataset), len(ac_feature))\n",
+    "    assert len(dataset) == len(ac_feature)\n",
+    "    return pd.concat([ac_feature, dep_ac_feature], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_experiment(\n",
+    "    name,\n",
+    "    genre,\n",
+    "    want_lc=False,\n",
+    "    want_gt=False,\n",
+    "    want_gwc=False,\n",
+    "    want_ac=False\n",
+    "):\n",
+    "    with open('results/{}_{}.txt'.format(name, genre), 'w') as f:\n",
+    "        train_set = pd.read_csv('data/train/{}/words.csv'.format(genre), encoding='ISO--8859-1', na_filter=False)\n",
+    "        X_train, test_fold_ids, vocabulary, gt_vocab, y_train = preprocess_data(\n",
+    "            train_set,\n",
+    "            want_lc=want_lc, want_gt=want_gt, want_gwc=want_gwc, want_ac=want_ac)\n",
+    "\n",
+    "        unigram_classifier = UnigramClassifier(\n",
+    "            verbose=10, random_state=0, C=10, penalty='l1',\n",
+    "            solver='liblinear', class_weight='balanced', max_iter=500,\n",
+    "            vocabulary=vocabulary\n",
+    "        )\n",
+    "\n",
+    "        C = np.logspace(-2,4,20)\n",
+    "        penalty = ['l1', 'l2']\n",
+    "        hyperparameters = {'C':C, 'penalty':penalty}\n",
+    "        clf = GridSearchCV(unigram_classifier, hyperparameters,\n",
+    "                           cv=PredefinedSplit(test_fold_ids),\n",
+    "                           verbose=10, scoring='f1', n_jobs=-1)\n",
+    "\n",
+    "        clf.fit(X_train, y_train)\n",
+    "\n",
+    "        test_set = pd.read_csv('data/test/{}/words.csv'.format(genre), encoding='ISO--8859-1', na_filter=False)\n",
+    "        X_test, _, _, _, y_test = preprocess_data(\n",
+    "            test_set, vocabulary=vocabulary, gt_vocab=gt_vocab,\n",
+    "            want_lc=want_lc, want_gt=want_gt, want_gwc=want_gwc, want_ac=want_ac)\n",
+    "        preds = clf.predict(X_test)\n",
+    "\n",
+    "        result = classification_report(y_test, preds, output_dict=True)\n",
+    "        print(result)\n",
+    "        f.write(json.dumps(result))"
    ]
   }
  ],
@@ -464,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
