--- a/Grammatical Dependencies.ipynb
+++ b/Grammatical Dependencies.ipynb
@@ -196,7 +196,7 @@
     "    dependencies = []\n",
     "    word_index_offset = 0\n",
     "    assert len(doc.sentences) == 1\n",
-    "    for sentence in doc.sentences:\n",
+    "    for sentence in doc.sentences:ea\n",
     "        for dep in sentence.dependencies:\n",
     "            governor, g_i = dep[0].text, int(dep[0].index) - 1 + word_index_offset\n",
     "            \n",
